# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE 0.15 - XXX

  From Matt Balvin:

  - Fix handling of library prefixes when the subdirectory matches
    the prefix.

  From Timothee Bessett:

  - Add an M4 Builder.

  From Charles Crain:

  - Use '.lnk' as the suffix on the temporary file for linking long
    command lines (necessary for the Phar Lap linkloc linker).

  From Steven Knight:

  - SCons now enforces (with an error) that construction variables
    must have the same form as valid Python identifiers.

  - Fix man page bugs: remove duplicate AddPostAction() description;
    document no_import_lib.

  - Eliminate a dependency on the distutils.fancy_getopt module by
    copying and pasting its wrap_text() function directly.

  - Make the Script.Options() subclass match the underlying base class
    implementation.

  From Steve Leblanc:

  - Don't update the .sconsign files when run with -n.

  From David Snopek

  - Fix use of SConf in paths with white space in them.

  - Add CheckFunc and CheckType functionality to SConf.

  - Fix use of SConf with Builders that return a list of nodes.

  From David Snopek and Christoph Wiedemann

  - Fix use of the SConf subsystem with SConscriptChdir().

  From Greg Spencer

  - Check for the existence of MS Visual Studio on disk before using it,
    to avoid getting fooled by leftover junk in the registry.

  - Add support for MSVC++ .NET.

  - Add support for MS Visual Studio project files (DSP, DSW,
    SLN and VCPROJ files).



RELEASE 0.14 - Wed, 21 May 2003 05:16:32 -0500

  From Chad Austin:

  - Use .dll (not .so) for shared libraries on Cygwin; use -fPIC
    when compiling them.

  - Use 'rm' to remove files under Cygwin.

  - Add a PLATFORM variable to construction environments.

  - Remove the "platform" argument from tool specifications.
